@@ -30,6 +30,7 @@ o remove (misleading) counters and use information from the statistics mode
 o use generic nfct_copy() from libnetfilter_conntrack to update objects
 o use generic nfct_cmp() to compare objects
 o improve network message sanity checkings
+o add Mcast[Snd|Rcv]SocketBuffer clauses to tune multicast socket buffers
 
 version 0.9.6 (2008/03/08)
 ------------------------------
